<resources>
    <string name="app_name">ToDozzz</string>
    <!--    change header title with name of the person taken in start   -->
    <string name="nav_header_title">ToDozzz!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_most_imp_list">Most Important Tasks</string>
    <string name="menu_master_list">Master List</string>
    <string name="menu_weekly_list">Weekly List</string>
    <string name="task_name">Task name</string>
    <string name="add_task">Add Task</string>

    <string name="display_task_name"><![CDATA[<b>Task Data:</b>]]></string>
    <string name="about_heading">TextView</string>
    <string name="about">About</string>


    <string name="about_data">A ToDo list manager to boost your productivity.\n\n    The tasks are divided into 3 categories:\n
<!--    \t<b>Most Important Tasks</b> - tasks requiring immediate attention\n-->
<!--    \t<b>Weekly List</b> - goals for the next 7 days\n-->
<!--    \t<b>Master List</b> - long term goals\n\n-->
<!--<b>Usage:</b>\n-->
<!--    You can save the tasks by enter the task name and clicking \'Add Task\' button.\n-->
<!--    You can clear the created tasks by clicking 'Clear' button.\n\n-->

<!--    Enjoy this ToDo list manager and achieve your goals. \n-->
    </string>
    <string name="todozzz">ToDozzz</string>
    <string name="clear">Clear</string>

</resources>

