<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_most_imp_list">

    <fragment
        android:id="@+id/nav_most_imp_list"
        android:name="com.example.todozzz.ui.mostImpList.MostImpListFragment"
        android:label="@string/menu_most_imp_list"
        tools:layout="@layout/fragment_most_imp_list" />

    <fragment
        android:id="@+id/nav_master_list"
        android:name="com.example.todozzz.ui.masterList.MasterListFragment"
        android:label="@string/menu_master_list"
        tools:layout="@layout/fragment_master_list" />

    <fragment
        android:id="@+id/nav_weekly_list"
        android:name="com.example.todozzz.ui.weeklyList.WeeklyListFragment"
        android:label="@string/menu_weekly_list"
        tools:layout="@layout/fragment_weekly_list" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.todozzz.AboutFragment"
        android:label="@string/about_data"
        tools:layout="@layout/fragment_about" />
</navigation>